SonarLint Fixes