@@ -14,7 +14,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/open-data")
@@ -45,7 +44,7 @@ public class OpenDataController {
     //Tirei os parametros, irei ve como vou fazer
     @GetMapping(value = "/atms")
     public ResponseEntity<List<BankAtmsDTO>> returnBankAtms() {
-        return ResponseEntity.ok().body(openDataService.findAllAtms().stream().map(x -> mapper.map(x, BankAtmsDTO.class)).collect(Collectors.toList()));
+        return ResponseEntity.ok().body(openDataService.findAllAtms().stream().map(x -> mapper.map(x, BankAtmsDTO.class)).toList());
     }
 
 }
